--- a/dulloa/index -week2.html
+++ b/dulloa/index -week2.html
@@ -5,7 +5,7 @@
   
 
   <link rel="stylesheet" type="text/css" href="_css/myStyle.css">
-  <script src="_js/myScript.js"></script>
+  <script src="myScript.js"></script>
 
 
   <body onload="draw()">
