--- a/dulloa/game.html
+++ b/dulloa/game.html
@@ -2,12 +2,16 @@
 <!DOCTYPE html>
 
 <html>
-
+    <canvas id="myCanvas" width="1500" height="750"></canvas>
 
 <head>
    
-    <meta charset="utf-8">
-    <title>My test page</title>
+    <meta charset="utf-8" />
+    <title>Game</title>
+    <style>
+    	* { padding: 0; margin: 0; }
+    	canvas { background: rgb(0, 0, 0); display: block; margin: 0 auto; }
+    </style>
    
     <script src="_js/game.js"></script>
     
@@ -21,3 +25,5 @@
 </body>
 
 </html>
+
+
